# QtExample

./: .gitignore  CMakeLists.txt  README.md
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
assets/: QtExample.rc
scripts/: build.bat  build.sh  build_and_run.bat  build_and_run.sh  clean.bat  clean.sh
src/: QtExample.cpp  QtExample.h  QtExample.ui  UI_QtExample.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_QtExample.h
